hphp/hack/test/typecheck/async_block3.php.exp
File "async_block3.php", line 4, characters 15-43:
Don't use `() ==> async { ... }`. Instead, use: `async () ==> { ... }` (Parsing[1002])
